--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,1 +1,19 @@
+<div class="container">
 <h1><%= @cocktail.name %></h1>
+<ul class="list-group">
+  <% @cocktail.doses.each do |dose| %>
+    <li class="list-group-item">
+      <%= dose.description %>
+      <%= dose.ingredient.name %>
+        <%= link_to "Delete dose",
+              dose_path(dose),
+              method: :delete,
+              data: { confirm: "Are you sure?" } %>
+      </li>
+    </li>
+  <% end %>
+</ul>
+<%= link_to  "add new dose", new_cocktail_dose_path(@cocktail) %>
+</div>
+
+
