--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the Cocktails controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-.background-image {
+.banner {
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -20,7 +20,11 @@
 h1 {
   padding: 100px 100px;
   margin: 0, auto;
-  
+  margin-bottom: 0.5rem;
+  font-family: "Nunito", "Helvetica", "sans-serif";
+  font-weight: 1000;
+  line-height: 1.2;
+  color: #e8327e;
 }
 h3 {
   padding: 10px 100px;
